# opc-deepbrain

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_multilingual.py
.github/workflows/: tests.yml
benchmark/: run_benchmark.py
deepbrain/: __init__.py  brain.py  chunker.py  cli.py  ingest.py  watch.py
tests/: conftest.py  test_chunker.py  test_conflicts.py  test_embedding.py
